# ai-dataanalyst-agent

./: .gitignore  README.md  pyproject.toml
database/: user_jobs.sql
postgres_da_ai_agent/: main.py
postgres_da_ai_agent/modules/: db.py  llm.py
